finish the Course#1

--- a/Week2/Optional Labs/C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb
+++ b/Week2/Optional Labs/C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb
@@ -94,7 +94,9 @@
     "# 3 Vectors\n",
     "<a name=\"toc_40015_3.1\"></a>\n",
     "## 3.1 Abstract\n",
-    "<img align=\"right\" src=\"./images/C1_W2_Lab04_Vectors.PNG\" style=\"width:340px;\" >Vectors, as you will use them in this course, are ordered arrays of numbers. In notation, vectors are denoted with lower case bold letters such as $\\mathbf{x}$.  The elements of a vector are all the same type. A vector does not, for example, contain both characters and numbers. The number of elements in the array is often referred to as the *dimension* though mathematicians may prefer *rank*. The vector shown has a dimension of $n$. The elements of a vector can be referenced with an index. In math settings, indexes typically run from 1 to n. In computer science and these labs, indexing will typically run from 0 to n-1.  In notation, elements of a vector, when referenced individually will indicate the index in a subscript, for example, the $0^{th}$ element, of the vector $\\mathbf{x}$ is $x_0$. Note, the x is not bold in this case.  \n"
+    "<img align=\"right\" src=\"./images/C1_W2_Lab04_Vectors.PNG\" style=\"width:340px;\" >\n",
+    "\n",
+    "Vectors, as you will use them in this course, are ordered arrays of numbers. In notation, vectors are denoted with lower case bold letters such as $\\mathbf{x}$.  The elements of a vector are all the same type. A vector does not, for example, contain both characters and numbers. The number of elements in the array is often referred to as the *dimension* though mathematicians may prefer *rank*. The vector shown has a dimension of $n$. The elements of a vector can be referenced with an index. In math settings, indexes typically run from 1 to n. In computer science and these labs, indexing will typically run from 0 to n-1.  In notation, elements of a vector, when referenced individually will indicate the index in a subscript, for example, the $0^{th}$ element, of the vector $\\mathbf{x}$ is $x_0$. Note, the x is not bold in this case.  \n"
    ]
   },
   {
@@ -152,7 +154,7 @@
      "text": [
       "np.zeros(4) :   a = [0. 0. 0. 0.], a shape = (4,), a data type = float64\n",
       "np.zeros(4,) :  a = [0. 0. 0. 0.], a shape = (4,), a data type = float64\n",
-      "np.random.random_sample(4): a = [0.16054681 0.65264985 0.98302218 0.29864795], a shape = (4,), a data type = float64\n"
+      "np.random.random_sample(4): a = [0.0218006  0.14281837 0.81060982 0.80108276], a shape = (4,), a data type = float64\n"
      ]
     }
    ],
@@ -188,7 +190,7 @@
      "output_type": "stream",
      "text": [
       "np.arange(4.):     a = [0. 1. 2. 3.], a shape = (4,), a data type = float64\n",
-      "np.random.rand(4): a = [0.04467047 0.14854614 0.24949402 0.02417095], a shape = (4,), a data type = float64\n"
+      "np.random.rand(4): a = [0.02314504 0.76120538 0.12372994 0.38570965], a shape = (4,), a data type = float64\n"
      ]
     }
    ],
@@ -329,7 +331,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a         = [0 1 2 3 4 5 6 7 8 9]\n",
+      "a        =  [0 1 2 3 4 5 6 7 8 9]\n",
       "a[2:7:1] =  [2 3 4 5 6]\n",
       "a[2:7:2] =  [2 4 6]\n",
       "a[3:]    =  [3 4 5 6 7 8 9]\n",
@@ -341,7 +343,7 @@
    "source": [
     "#vector slicing operations\n",
     "a = np.arange(10)\n",
-    "print(f\"a         = {a}\")\n",
+    "print(f\"a        =  {a}\")\n",
     "\n",
     "#access 5 consecutive elements (start:stop:step)\n",
     "c = a[2:7:1];     print(\"a[2:7:1] = \", c)\n",
@@ -706,9 +708,9 @@
      "output_type": "stream",
      "text": [
       "np.dot(a, b) =  2501072.5817\n",
-      "Vectorized version duration: 29.9268 ms \n",
+      "Vectorized version duration: 3.6578 ms \n",
       "my_dot(a, b) =  2501072.5817\n",
-      "loop version duration: 2137.4848 ms \n"
+      "loop version duration: 2634.3989 ms \n"
      ]
     }
    ],
@@ -1143,7 +1145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.7"
   },
   "toc-autonumbering": false
  },
